# maffilter

./: .gitignore  .pre-commit-config.yaml  AUTHORS.txt  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.txt  README.md  buildBin.sh  maffilter.spec
.github/workflows/: cmake-multi-platform.yml
GenomeTools/: CMakeLists.txt  MafFilter.cpp  MafInfo.cpp  MafIterators.cpp  MafIterators.h  MafQDist.cpp
MafFilter/: CMakeLists.txt  MafFilter.cpp  MafIterators.h  MafQDist.cpp  OutputAsFeaturesMafIterator.cpp  OutputAsFeaturesMafIterator.h  PopGenMafStatistics.cpp  PopGenMafStatistics.h  SystemCallMafIterator.cpp  SystemCallMafIterator.h  TreeBuildingSystemCallMafIterator.cpp  TreeBuildingSystemCallMafIterator.h
debian/: changelog  control  copyright  maffilter.manpages  rules
doc/: CMakeLists.txt  maffilter.texi
docs/: _config.yml  index.md  maffilter.html
docs/Manual/: AlnFilter.html  AlnFilter2.html  AlnScore.html  Analyzing.html  BlockCounts.html  BlockLength.html  BlockSize.html  Cleaning.html  Concatenate.html  CountClusters.html  Description.html  Descriptive.html  DistanceBasedPhylogeny.html  DistanceEstimation.html  DiversityStatistics.html  DropSpecies.html  EntropyFilter.html  Exporting.html  ExtractFeature.html  Extracting.html  FeatureFilter.html  Filters.html  FourSpeciesSitePatternCounts.html  General.html  Introduction.html  LiftOver.html  MaskFilter.html  Merge.html  MinBlockLength.html  MinBlockSize.html  Miscelaneous.html  ModelFit.html  MsmcOutput.html  NewOutgroup.html  OrderFilter.html  Output.html  OutputAlignments.html  OutputAsTable.html  OutputCoordinates.html  OutputDistanceMatrices.html  (+20 more)
examples/: MafFilter.bpp
examples/Gorilla/: MafFilter.bpp  MafFilterGC.bpp
examples/UCSC46ways/: MafFilter.bpp  MafFilterDistance.bpp  MafFilterDistance_anaysis.R  MafFilterTest.bpp  README  parse.pl
examples/Umaydis/: MafFilterNonCoding.bpp  MafFilterNonCoding_analysis.R  Umaydis.gff3
examples/Ztritici/: MafFilter.bpp  syrupy_20131118140314.out.log.license
man/: CMakeLists.txt  maffilter.1  maffilter.1.txt
utils/: convertAln.py
